# aplikacja-desktopowa-rust

./: .gitignore
aplikacja/frontend/: Cargo.toml
aplikacja/frontend/public/: main.css
aplikacja/frontend/src/: main.rs  view.rs
aplikacja/frontend/src/network/: network_service.rs
aplikacja/frontend/src/view/: data_component.rs  mainApp.rs  main_app.rs  mod.rs  panel_component.rs
aplikacja/src-tauri/: Cargo.toml  tauri.conf.json
aplikacja/src-tauri/src/: main.rs
