[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
gloo-console = "0.2.3"
js-sys = "0.3.60"
reqwasm = "0.5.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = "0.3.60"
yew = { version = "0.20", features = ["csr"] }
